# advent2024

./: pyproject.toml
day_01/: main1.py  main2.py
day_02/: main1.py  main2.py
template/: main1.py
