[project]
name = "advent2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tommy Duchesne", email = "tommy.duchesne2@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
